# pianoforte

./: CMakeLists.txt  core.cpp  core.h  main.cpp  player.cpp  player.h  scene.cpp  scene.h
